# aubo_ws

./: README.md
install/: local_setup.sh  setup.sh
install/argo/share/argo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/argo/share/argo/cmake/: argoConfig.cmake
install/argo/share/argo/config/: joint_names_argo_v2.yaml
install/argo/share/argo/launch/: argo.launch.py
install/argo/share/argo/meshes/: W1.STL  W2.STL  W3.STL  W5.STL  W6.STL  W7.STL  base_gps.STL  base_link.STL  front_cam.STL
install/argo/share/argo/urdf/: argo.csv
install/aubo/share/aubo/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/aubo/share/aubo/config/: aubo_control.yaml
install/aubo/share/aubo/launch/: aubo.launch.py  spawn.launch
install/aubo/share/aubo/urdf/: aubo_argo.urdf  aubo_i5.urdf  aubo_i5.urdf.xacro
install/aubo_description/share/aubo_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/aubo_description/share/aubo_description/cmake/: aubo_descriptionConfig.cmake
install/control/lib/control/: dir_kin  inv_kin  sim_control  sim_pub  sim_sub  sim_test  test_pub  test_pub_q
install/control/share/ament_index/resource_index/package_run_dependencies/: control
install/control/share/ament_index/resource_index/parent_prefix_path/: control
install/control/share/control/: package.sh  package.xml
install/control/share/control/launch/: full.launch.py  gz.launch.py  gz_4.launch.py  gz_5.launch.py  nodes.launch.py  one_robot.launch.py  robots.launch.py  view_robot.launch.py  world.launch.py
log/: latest_build
src/aubo_control/argo/: CMakeLists.txt  model.config  package.xml
src/aubo_control/argo/config/: joint_names_argo.yaml
src/aubo_control/argo/meshes/: W4.STL  W8.STL  brdge.STL  imu.STL  rear_cam.STL  top.STL
src/aubo_control/argo/urdf/: argo.urdf
src/aubo_control/aubo/: CMakeLists.txt  model.config
src/aubo_control/aubo/launch/: spawn_robot_launch_v4.launch.py
src/aubo_control/aubo/urdf/: aubo.gazebo.xacro
src/aubo_control/control/: CMakeLists.txt
src/aubo_control/control/include/control/: aubo_kin_mod.hpp  configuracion.hpp  controller.hpp  dir_kin.hpp  inv_kin.hpp  sim_control.hpp  sim_pub.hpp  test_pub.hpp
src/aubo_control/control/launch/: gz_1.launch.py  simulacion.launch.py
src/aubo_control/control/src/: controller.cpp  dir_kin.cpp  inv_kin.cpp  sim_control.cpp  sim_pub.cpp  test_pub.cpp  test_pub_q.cpp
src/aubo_control/control/worlds/: gazebo_ros_joint_pose_trajectory_demo.world  gz_3.world
src/aubo_description/: CMakeLists.txt
src/aubo_description/urdf/: aubo_i5.urdf.xacro
